# CLImgType

./: CMakeLists.txt  README.md  cochon.txt  imagetypes.cpp
